--- a/composer.json
+++ b/composer.json
@@ -14,7 +14,8 @@
     ],
     "require": {
         "phpixie/console": "~3.3",
-        "phpixie/slice": "~3.0"
+        "phpixie/slice": "~3.0",
+        "phpixie/database": "~3.0"
     },
     "require-dev": {
         "phpixie/test": "~3.0"
